# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp  trainedModel.txt
imageLoader/: Data.cpp  Data.h  stb_image.cpp  stb_image.h  stb_image_resize.h  std_image_resize.cpp
math/: Matrix.h  Vector.h
neuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
toolbox/: Random.cpp  Random.h
train/: Train.h
util/: Util.cpp  Util.h
